--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,12 @@
 # .tfstate files
 *.tfstate
 *.tfstate.*
-*.lock.*
-
+*.pem
+*.ppk
 # Crash log files
 crash.log
-
+ip.txt
+*.out
 # Ignore any .tfvars files that are generated automatically for each Terraform run. Most
 # .tfvars files are managed as part of configuration and so should be included in
 # version control.
@@ -28,3 +29,5 @@ override.tf.json
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+*.terraform.lock.hcl*
+.terraform.lock.hcl
