make aws iam Administrator to cluster admin

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,6 @@
 *.ppk
 # Crash log files
 crash.log
-ip.txt
 *.out
 # Ignore any .tfvars files that are generated automatically for each Terraform run. Most
 # .tfvars files are managed as part of configuration and so should be included in
@@ -30,3 +29,5 @@ override.tf.json
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
 
+# intermediate debug output
+*.ig
